Spacing fixes for mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -53,7 +53,7 @@
 }
 
 .row:not(:last-child) {
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 
 ul.labeled-icons li a {
@@ -66,4 +66,19 @@ ul.labeled-icons li a {
         padding: 0 0 0 0;
         margin: 0 0 0 2.5em;
     } */
+}
+
+@media screen and (max-width: 700px) {
+
+    .row > article {
+        margin-bottom: 1rem;
+    }
+
+    .row:not(:last-child) {
+        margin-bottom: 0;
+    }
+
+    .hide-mobile {
+        display: none;
+    }
 }
