--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3203,7 +3203,7 @@ input, select, textarea {
 			}
 
 				#main > section {
-					margin: 2.25em 0 0 0;
+					margin: 0 0 0 0;
 					padding: 2.25em 0 0 0;
 				}
 
